--- a/ali/templates/ali/challenge.html
+++ b/ali/templates/ali/challenge.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <h1>
-        hello world
-        {{ data }}
+        hello world </br>
+        {{ data }}  </br>
+        {{ text|title }}
     </h1>
 </body>
 </html>
