using {% url %} and sendig parameter

--- a/ali/templates/ali/challenge.html
+++ b/ali/templates/ali/challenge.html
@@ -18,6 +18,7 @@
                 <li>{{ i }}</li>
             {% endfor %}
         </ul>
+    </br> <a href="{% url 'ali:dynamic' 1 %}"> click here! </a>
     </h2>
 
 </body>
