using extends and block

--- a/ali/templates/ali/challenge.html
+++ b/ali/templates/ali/challenge.html
@@ -1,31 +1,27 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Testing</title>
-</head>
-<body>
-    <h1>
-        hello world </br>
-        {{ data }}  </br>
-        {{ text|title }}
-    </h1>
-    <h2>
-        <ul>
-            {% for i in data%}
-                <li>{{ i }}</li>
-            {% endfor %}
-        </ul>
-    </br> <a href="{% url 'ali:dynamic' 1 %}"> click here! </a>
-    </h2>
-    <p>
-        {% if data is None %}
-            سلام بر تو عزیز
-        {% else %}
-            درود بر تو عزیز
-        {% endif %}
-    </p>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block page_title %}
+Testing
+{% endblock %}
+{% block content %}
+<h1>
+    hello world </br>
+    {{ data }}  </br>
+    {{ text|title }}
+</h1>
+<h2>
+    <ul>
+        {% for i in data%}
+            <li>{{ i }}</li>
+        {% endfor %}
+    </ul>
+</br> <a href="{% url 'ali:dynamic' 1 %}"> click here! </a>
+</h2>
+<p>
+    {% if data is None %}
+        سلام بر تو عزیز
+    {% else %}
+        درود بر تو عزیز
+    {% endif %}
+</p>
+{% endblock %}
