--- a/ali/templates/ali/challenge.html
+++ b/ali/templates/ali/challenge.html
@@ -3,7 +3,11 @@
 {% block page_title %}
 Testing
 {% endblock %}
+
 {% block content %}
+
+{% include 'ali/includes/header.html' %}
+
 <h1>
     hello world </br>
     {{ data }}  </br>
