sending parameter to included html file

--- a/ali/templates/ali/challenge.html
+++ b/ali/templates/ali/challenge.html
@@ -6,8 +6,7 @@ Testing
 
 {% block content %}
 
-{% include 'ali/includes/header.html' %}
-
+{% include 'ali/includes/header.html' with omid="omidzb" %}
 
 <h1>
     hello world </br>
