using load static and static to load c.css

--- a/ali/templates/ali/challenge.html
+++ b/ali/templates/ali/challenge.html
@@ -1,7 +1,12 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block page_title %}
 Testing
+{% endblock %}
+
+{% block header_refrences %}
+<link rel="stylesheet" href="{% static "ali/c.css" %}">
 {% endblock %}
 
 {% block content %}
