--- a/ali/static/ali/c.css
+++ b/ali/static/ali/c.css
@@ -1,8 +1,53 @@
-ul{
+ul {
     list-style: none;
+    margin: 2rem auto;  /* margin: top right bottom left, here top/down right/left  */
+    width: 90%;
+    max-width: 20rem;
+    padding: 1rem;  
+    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.3) ;   /* offset-x | offset-y | blur-radius | color */
+    text-align: center;
+    background-color: rgb(51, 79, 47);
 }
 
-ul li {
-    float: left;
-    padding: 5px 10px;
+li {
+    font-family: "Times New Roman", Times, serif;
+    margin: 1rem 0;
+    text-align: center;
+    font-size: 2rem;
+    border-bottom: 1px solid #ccc;
+    padding-bottom: 1rem;
+    transition: all ease 0.3s;
 }
+
+li:last-child {
+    border-bottom: none ;
+}
+
+h1,
+h2 {
+    text-align: center;
+}
+
+li:hover {
+    color: rgb(0, 255, 94);
+}
+/*
+ul {
+    list-style: none;
+    margin: 2rem auto;
+    width: 90%;
+    max-width: 20rem;
+    box-shadow: 0 2px 8px rgba(0, 0, 0, .3);
+    padding: 1rem;
+    border-radius: 15px;
+    background-color: rgb(216, 216, 216);
+}
+
+li {
+    margin: 1rem 0;
+    text-align: center;
+    font-size: 2rem;
+    border-bottom: 1px solid #ccc;
+    padding-bottom: 1rem;
+}
+*/  
