styling header using css

--- a/ali/templates/ali/challenge.html
+++ b/ali/templates/ali/challenge.html
@@ -7,6 +7,7 @@ Testing
 
 {% block header_refrences %}
 <link rel="stylesheet" href="{% static "ali/c.css" %}">
+<link rel="stylesheet" href="{% static "ali/includes/header.css" %}">
 {% endblock %}
 
 {% block content %}
